--- a/src/Game.fxml
+++ b/src/Game.fxml
@@ -11,63 +11,60 @@
 <AnchorPane prefHeight="801.0" prefWidth="1103.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
     <children>
         <HBox fx:id="center" layoutX="490.0" layoutY="386.0" prefHeight="40.0" prefWidth="60.0" />
-        <HBox layoutX="1.0" layoutY="760.0" prefHeight="65.0" prefWidth="451.0">
-            <children>
+        <HBox fx:id="playerHand" layoutX="516.0" layoutY="750.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="552.0" />
+        <HBox fx:id="p2" alignment="TOP_RIGHT" layoutX="422.0" layoutY="389.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="35.0" prefWidth="60.0" />
+        <HBox fx:id="mexTrain" layoutX="554.0" layoutY="391.0" prefHeight="35.0" prefWidth="543.0" />
+        <Label fx:id="mexTrainLabel" layoutX="619.0" layoutY="343.0" prefHeight="34.0" prefWidth="124.0" />
+        <Label fx:id="p1Label" layoutX="544.0" layoutY="504.0" prefHeight="34.0" prefWidth="131.0" />
+        <Label fx:id="p2Label" layoutX="274.0" layoutY="347.0" prefHeight="34.0" prefWidth="121.0" />
+        <Label fx:id="p3Label" layoutX="349.0" layoutY="156.0" prefHeight="34.0" prefWidth="121.0" />
+        <Label fx:id="p4Label" layoutX="580.0" layoutY="153.0" prefHeight="34.0" prefWidth="121.0" />
+        <VBox fx:id="p1" alignment="TOP_CENTER" layoutX="481.0" layoutY="427.0" prefHeight="405.0" prefWidth="35.0" spacing="10.0" />
+        <VBox fx:id="p3" alignment="BOTTOM_CENTER" layoutX="483.0" layoutY="14.0" prefHeight="369.0" prefWidth="35.0" spacing="10.0" />
+        <VBox fx:id="p4" alignment="BOTTOM_CENTER" layoutX="522.0" layoutY="2.0" prefHeight="381.0" prefWidth="35.0" spacing="10.0" />
+        <Label fx:id="gameStateLabel" layoutX="4.0" layoutY="673.0" prefHeight="116.0" prefWidth="473.0" textAlignment="CENTER" textFill="RED">
+         <font>
+            <Font size="22.0" />
+         </font></Label>
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="886.0" layoutY="15.0" text="*NOTE*&#10;*(false) = train closed*&#10;*(true) = train open*&#10;*Mexican Train = 0*&#10;*Player1 Train = 1*&#10;so on..." textAlignment="CENTER">
+            <font>
+                <Font size="21.0" />
+            </font>
+        </Label>
+      <VBox alignment="CENTER" layoutX="4.0" layoutY="8.0" prefHeight="275.0" prefWidth="335.0">
+         <children>
+              <Label alignment="CENTER" prefHeight="39.0" prefWidth="295.0" text="Please play, draw or skip.">
+                  <font>
+                      <Font size="26.0" />
+                  </font>
+              </Label>
+              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="34.0" prefWidth="115.0" text="To Play:">
+                  <font>
+                      <Font size="26.0" />
+                  </font>
+              </Label>
+              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="136.0" prefWidth="239.0" text="Enter Domino # &amp; Train #&#10;seperated by a comma&#10;EX: 1,1&#10;Press enter when done.&#10;" textAlignment="CENTER">
+                  <font>
+                      <Font size="19.0" />
+                  </font>
+              </Label>
                 <Label fx:id="currentPlayerLbl" alignment="CENTER" contentDisplay="CENTER" prefHeight="31.0" prefWidth="248.0" textAlignment="CENTER">
                     <font>
                         <Font size="18.0" />
                     </font></Label>
-                <Button fx:id="drawButton" mnemonicParsing="false" onAction="#drawButtonPress" prefHeight="35.0" prefWidth="71.0" text="Draw" />
-                <Button fx:id="skipButton" mnemonicParsing="false" onAction="#skipButtonPress" prefHeight="35.0" prefWidth="78.0" text="Skip" />
-            </children></HBox>
-        <HBox fx:id="playerHand" layoutX="522.0" layoutY="745.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="552.0" />
-        <HBox fx:id="p2" alignment="CENTER_RIGHT" layoutX="3.0" layoutY="386.0" prefHeight="35.0" prefWidth="484.0" />
-        <HBox fx:id="mexTrain" layoutX="554.0" layoutY="391.0" prefHeight="35.0" prefWidth="543.0" />
-        <Label fx:id="mexTrainLabel" layoutX="741.0" layoutY="345.0" prefHeight="34.0" prefWidth="124.0" />
-        <Label fx:id="p1Label" layoutX="571.0" layoutY="506.0" prefHeight="34.0" prefWidth="131.0" />
-        <Label fx:id="p2Label" layoutX="144.0" layoutY="346.0" prefHeight="34.0" prefWidth="121.0" />
-        <Label fx:id="p3Label" layoutX="333.0" layoutY="95.0" prefHeight="34.0" prefWidth="121.0" />
-        <Label fx:id="p4Label" layoutX="582.0" layoutY="94.0" prefHeight="34.0" prefWidth="121.0" />
-        <VBox fx:id="p1" alignment="TOP_CENTER" layoutX="481.0" layoutY="427.0" prefHeight="405.0" prefWidth="35.0" />
-        <VBox fx:id="p3" alignment="BOTTOM_CENTER" layoutX="483.0" layoutY="14.0" prefHeight="369.0" prefWidth="35.0" />
-        <VBox fx:id="p4" alignment="BOTTOM_CENTER" layoutX="522.0" layoutY="2.0" prefHeight="381.0" prefWidth="35.0" />
-        <Label fx:id="gameStateLabel" layoutX="11.0" layoutY="478.0" prefHeight="78.0" prefWidth="392.0" textAlignment="CENTER" textFill="RED" />
-        <Label layoutX="5.0" layoutY="434.0" prefHeight="39.0" prefWidth="295.0" text="Please play, draw or skip.">
-            <font>
-                <Font size="26.0" />
-            </font>
-        </Label>
-        <Label layoutX="66.0" layoutY="30.0" text="*(False) = train is closed*">
-            <font>
-                <Font size="21.0" />
-            </font>
-        </Label>
-        <Label layoutX="72.0" layoutY="60.0" text="*(True) = train is open*">
-            <font>
-                <Font size="21.0" />
-            </font>
-        </Label>
-        <Button fx:id="p3Button" layoutX="320.0" layoutY="144.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="142.0" />
-        <Button fx:id="p4Button" layoutX="577.0" layoutY="144.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="135.0" />
-        <Button fx:id="mexTrainButton" layoutX="895.0" layoutY="350.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="148.0" />
-        <Button fx:id="p2Button" layoutX="285.0" layoutY="349.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="169.0" />
-        <Button fx:id="p1Button" layoutX="562.0" layoutY="553.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="169.0" text="Button" />
-        <Label layoutX="6.0" layoutY="608.0" prefHeight="44.0" prefWidth="239.0" text="Enter Domino # &amp; Press Enter">
-            <font>
-                <Font size="19.0" />
-            </font>
-        </Label>
-        <TextField fx:id="domNumber" layoutX="259.0" layoutY="615.0" onAction="#enterDomNum" />
-        <TextField fx:id="trainNumber" layoutX="267.0" layoutY="650.0" onAction="#enterTrainNum" />
-        <Label layoutX="7.0" layoutY="649.0" prefHeight="30.0" prefWidth="252.0" text="Enter Train # &amp; Press Enter">
-            <font>
-                <Font size="22.0" />
-            </font>
-        </Label>
-        <Label layoutX="105.0" layoutY="571.0" prefHeight="34.0" prefWidth="115.0" text="To Play:">
-            <font>
-                <Font size="28.0" />
-            </font>
-        </Label>
+              <TextField fx:id="playInputs" onAction="#getPlayInputs" prefHeight="27.0" prefWidth="231.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                      <Button fx:id="drawButton" mnemonicParsing="false" onAction="#drawButtonPress" prefHeight="35.0" prefWidth="71.0" text="Draw" />
+                      <Button fx:id="skipButton" mnemonicParsing="false" onAction="#skipButtonPress" prefHeight="35.0" prefWidth="78.0" text="Skip" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+      <Label fx:id="currentPlayerLbl1" alignment="CENTER" contentDisplay="CENTER" layoutX="602.0" layoutY="707.0" prefHeight="31.0" prefWidth="248.0" textAlignment="CENTER">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
